# company

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  README.md  build.sh  nixpacks.toml  pyproject.toml  railway.toml  start.sh
.github/: copilot-instructions.md
backend/: seed_data.py
backend/core/: settings.py  urls.py
backend/landing_page/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/landing_page/migrations/: 0001_initial.py  0002_alter_portfolioproject_image_and_more.py  0003_pricingplan.py  0004_pricingplan_plan_type_pricingplan_sub_note.py
backend/static/css/: style.css
backend/static/images/: .gitkeep
backend/static/js/: main.js
backend/templates/: base.html
backend/templates/landing_page/: index.html
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  Portfolio.tsx  PortfolioCard.tsx  ServiceCard.tsx  Services.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: globals.css
